# test-cli-reader-csv

./: .flake8  .gitignore  .pre-commit-config.yaml  500  README.md  main.py  pyproject.toml
src/: interfaces.py  main.py
tests/: test_main.py
