[project]
name = "test-cli-reader-csv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "tabulate>=0.9.0",
]

[tool.pre-commit]
repos = [
  { repo = "https://github.com/psf/black", rev = "23.7.0", hooks = [{id = "black", args = ["--line-length=88"]}] },
  { repo = "https://github.com/PyCQA/flake8", rev = "6.0.0", hooks = [{id = "flake8", args = ["--max-line-length=88"]}] },
]

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
